# frappe_bigquery

./: LICENSE  README.md  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: lint.yml  server-tests.yml
frappe_bigquery/: .yamllint.yml  MANIFEST.in  __init__.py  hooks.py  modules.txt  setup.cfg  setup.py
frappe_bigquery/.github/workflows/: server-tests.yml
frappe_bigquery/bigquery_connector/doctype/bigquery_query/: bigquery_query.json  bigquery_query.py
frappe_bigquery/bigquery_connector/doctype/bigquery_query_column/: bigquery_query_column.py
frappe_bigquery/bigquery_connector/doctype/bigquery_settings/: bigquery_settings.py
frappe_bigquery/config/: desktop.py
frappe_bigquery/frappe_bigquery/bigquery_connector/: __init__.py
frappe_bigquery/frappe_bigquery/bigquery_connector/doctype/bigquery_query/: bigquery_query.js
frappe_bigquery/frappe_bigquery/bigquery_connector/doctype/bigquery_query_column/: bigquery_query_column.json
frappe_bigquery/frappe_bigquery/bigquery_connector/doctype/bigquery_settings/: bigquery_settings.json
frappe_bigquery/frappe_bigquery/doctype/bigquery_query/: bigquery_query.js  bigquery_query.json  bigquery_query.py
frappe_bigquery/frappe_bigquery/doctype/bigquery_query_column/: bigquery_query_column.json
frappe_bigquery/frappe_bigquery/doctype/bigquery_settings/: bigquery_settings.json  bigquery_settings.py
frappe_bigquery/frappe_bigquery/patches/: bigquery.py
frappe_bigquery/frappe_bigquery/tasks/: scheduler.py
frappe_bigquery/tasks/: scheduler.py
frappe_bigquery/utils/: bq.py
(+1 files in other folders)
