[metadata]
name = frappe_bigquery
version = 0.1.0
description = BigQuery connector for Frappe
long_description = file: README.md
long_description_content_type = text/markdown
author = Niyu Labs
author_email = info@niyulabs.com
url = https://github.com/NiyuFrappe/frappe_bigquery
license = MIT
license_files = LICENSE
project_urls =
    Source = https://github.com/NiyuFrappe/frappe_bigquery
    Issues = https://github.com/NiyuFrappe/frappe_bigquery/issues

[options]
packages = find:
include_package_data = True
python_requires = >=3.10
install_requires =
    google-cloud-bigquery>=3.25.0
    pandas>=2.0.3
    pyarrow>=15.0.0

[options.packages.find]
where = .
